--- a/app/templates/b.html
+++ b/app/templates/b.html
@@ -21,7 +21,7 @@
 				<h3>Task 1b</h3>
 			</div>
 			<div class="col-6">
-				<button class="btn btn-light float-right">
+				<button class="btn btn-light float-right" id ="stop">
 					Stop
 				</button>
 			</div>
@@ -39,9 +39,16 @@
 
 
 <script type="text/javascript">
-
+  function addBubble() {
+    //$(".col-12").addClass("p2-circle bg-purple");
+    $(".shape-container").append("<div class='p2-circle bg-blue'></div>")
+    //$(".p2-circle bg-purple").appendTo("shape-container");
+  };
+  var func = setInterval(addBubble, 1000);
 	// your solution here
-
+  $("#stop").click(function() {
+    clearInterval(func);
+  });
 </script>
 </body>
 </html>
