--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -74,7 +74,7 @@
   $("[name='orangeborder']").click(function() {
     $("[name='orangeborder']").hide();
   });
-  $("[name='gradient']").click(function() {
+  $("[name='gradient']").hover(function() {
     $("[name='gradient']").hide();
   });
   $("[name='orangeborder']").click(function() {
